--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            background-color: gray;
+            background-color: rgb(250, 231, 64);
             justify-content: center;
             font-family: 'Times New Roman', Times, serif;
             font-size: 18px;
@@ -39,7 +39,7 @@
         }
         .start-screen{
             background-color: black;
-            z-index: -9999;
+            z-index: 10;
             width: 100vw;
             height: 100vh;
             margin: auto 0;
@@ -57,9 +57,10 @@
             left: 0;
             height: 100vh;
             width: auto;
-            z-index: -9999;
+            z-index: 0;
         }
         .titles {
+            z-index: 11;
             text-align: center;
             display: flex;
             flex-direction: column;
@@ -69,6 +70,7 @@
             color: orange;
         }
         .titles h1{
+            padding: 20px;
             font-size: 86px;
             -webkit-text-stroke: 2px black;
             width: min-content;
@@ -110,6 +112,10 @@
         .play-button{
             background-color: transparent;
             border: transparent;
+            display: inline-block;
+            visibility: visible;
+            position: relative;
+            z-index: 9999;
         }
         .hidden{
             display: none;
@@ -142,7 +148,7 @@
             height: 16%;
             width: 41.5%;
             transform: translate(-50%, -50%);
-            background-color: black;
+            background-color: rgb(45, 45, 45);
             border: 3px solid black;
         }
 
@@ -250,7 +256,7 @@
     </style>
 </head>
 <body>
-    <div class="start-screen hidden">
+    <div class="start-screen">
         <!-- Background -->
         <img class="start-screen-image"src="assets/backgrounds/pineapple-house.webp" alt="SpongeBob's Pineapple House" class="start-screen__image">
 
@@ -267,7 +273,7 @@
     </div>
 
     <!-- When play button is pressed -->
-    <div class="console-container">
+    <div class="console-container hidden">
         <!-- Console Image -->
         <img class="console-image"console-image src="assets/console.png" alt="Blue Game Console">
         
@@ -549,6 +555,14 @@
             console.log(message);
         }
 
+        const playButton = document.querySelector(".play-button");
+        playButton.addEventListener("click", function(){
+            console.log("clicked");
+            const startScreen = document.querySelector(".start-screen");
+            startScreen.classList.add("hidden");
+            const consoleContainer = document.querySelector(".console-container");
+            consoleContainer.classList.remove("hidden");
+        });
         //play 5 rounds
         // playGame();
 
