Fix: character button - ensure the button remains unclickable - remove the corresponding dpad-button class - restore the button's previous style

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <button id="jellyfish" class="dpad-button button-jellyfish">
             <img class="image-jellyfish" src="assets/selections/jellyfish.png" alt="SpongeBob Pink Jellyfish">
         </button>
-        <button class="dpad-button button-character">
+        <button class="button-character">
             <img class="image-character" src="assets/characters/spongebob.png" alt="SpongeBob Pixel Art">
         </button>
 
